# marbel

./: .gitattributes  .gitignore  README.md  build.sh  environment.yml  meta.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: github_tests.yml
recipe/: meta.yaml
src/: data_generations.py  meta_tran_sim.py  presets.py
src/marbel/: block_generation.py  cli.py  core.py  data_generations.py  helpers.py  io_utils.py  meta_tran_sim.py  preload.py  presets.py
src/marbel/data/: EDGAR_all_species.newick  cds_genomic_locations.parquet  deduplicated_pangenome_EDGAR_Microbiome_JLAB2.fas.bgz  deduplicated_pangenome_EDGAR_Microbiome_JLAB2.fas.bgz.bio_index  orthologues_processed_combined_all.parquet  species_stats.json
src/meta_tran_sim/: data_generations.py  meta_tran_sim.py  presets.py
src/meta_tran_sim/data/: EDGAR_all_species.newick
summary/: gene_summary.csv  meta_tran_sim_params.txt
tests/: env_functional.yaml  run_functional.py  test_block_creation.py  test_calculation.py  test_cli.py  test_data_generations.py  test_functional.py  test_io_uitls.py  test_sparsity.py  tests_andi.py
