[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "meta_tran_sim"
version = "0.0.1"
authors = [
  { name="Timo Wentong Lin", email="ge2317@uni-giessen.de" },

]
description = "A CLI for creating a simulated metatranscritpome dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
          "License :: OSI Approved :: Apache Software License",
          "Operating System :: OS Independent",
          "Programming Language :: Python :: 3",
          "Programming Language :: Python :: 3.8",
          "Programming Language :: Python :: 3.9",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/jlab/meta_tran_sim_dev" 
"Bug Tracker" = "https://github.com/jlab/meta_tran_sim_dev/issues" 

[project.scripts]
meta-tran-sim = "meta_tran_sim.meta_tran_sim:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_tran_sim"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]