[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "marbel"
dynamic = ["version", "dependencies"]
authors = [
  { name="Timo Wentong Lin", email="ge2317@uni-giessen.de" },

]
description = "A CLI for creating a simulated metatranscritpome dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
          "License :: OSI Approved :: Apache Software License",
          "Operating System :: OS Independent",
          "Programming Language :: Python :: 3",
          "Programming Language :: Python :: 3.8",
          "Programming Language :: Python :: 3.9",
]

[project.urls]
"Homepage" = "https://github.com/jlab/marbel" 
"Bug Tracker" = "https://github.com/jlab/marbel/issues" 

[project.scripts]
marbel= "marbel.meta_tran_sim:app"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/marbel"]

[tool.hatch.build]
include = [
    "src/marbel/data/deduplicated_pangenome_EDGAR_Microbiome_JLAB2.fas.bgz",
    "src/marbel/data/deduplicated_pangenome_EDGAR_Microbiome_JLAB2.fas.bgz.bio_index",
    "src/marbel/data/orthologues_processed_combined_all.parquet",
    "src/marbel/data/EDGAR_all_species.newick",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/marbel/presets.py"