[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marbel"
dynamic = ["version"]
authors = [
  { name="Timo Wentong Lin", email="ge2317@uni-giessen.de" },

]
description = "A CLI for creating a simulated metatranscritpome dataset"
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
  "arviz",
  "pymc",
  "typer",
  "biopython",
  "pyarrow",
  "typing_extensions",
  "pandas",
  "ete4",
  "progress",
  "joblib",
  "polars"
]

[project.urls]
"Homepage" = "https://github.com/jlab/marbel" 
"Bug Tracker" = "https://github.com/jlab/marbel/issues" 

[project.scripts]
marbel= "marbel.cli:app"



[tool.hatch.build.targets.wheel]
packages = ["src/marbel"]

[tool.hatch.build]
include = [
    "src/marbel/data/deduplicated_pangenome_EDGAR_Microbiome_JLAB2.fas.bgz",
    "src/marbel/data/deduplicated_pangenome_EDGAR_Microbiome_JLAB2.fas.bgz.bio_index",
    "src/marbel/data/orthologues_processed_combined_all.parquet",
    "src/marbel/data/cds_genomic_locations.parquet",
    "src/marbel/data/EDGAR_all_species.newick",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/marbel/presets.py"
